apps/gcp/prow/post/job-ns/tests/set-ci-worker-pod-defaults/patched-no-affinity.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-no-affinity
  namespace: prow-test-pods
  annotations:
    cluster-autoscaler.kubernetes.io/safe-to-evict: "false"
spec:
  containers:
    - name: test
      image: ghcr.io/pingcap-qe/ci/base:v2024.10.8-32-ge807718-go1.23
      command: ["bash", "-ce", "make clippy"]
  nodeSelector:
    cloud.google.com/compute-class: ci-worker-ondemand
