apps/gcp/prow/post/job-ns/tests/set-ci-worker-pod-defaults/resource-arm64-affinity.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-arm64-affinity
  namespace: prow-test-pods
spec:
  containers:
    - name: test
      image: ghcr.io/pingcap-qe/ci/base:v2024.10.8-32-ge807718-go1.23
      command: ["bash", "-ce", "make clippy"]
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
          - matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                  - arm64
