apps/gcp/prow/post/job-ns/tests/set-ci-worker-pod-defaults/resource-arm64-nodeselector.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-arm64-nodeselector
  namespace: prow-test-pods
spec:
  containers:
    - name: test
      image: ghcr.io/pingcap-qe/ci/base:v2024.10.8-32-ge807718-go1.23
      command: ["bash", "-ce", "make clippy"]
  nodeSelector:
    kubernetes.io/arch: arm64
